# QuestEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompileShaders.bat  GenerateBuild-Ninja.bat  GenerateBuild-VS2022.bat  README.md  Setup.bat  TODO_LIST.md
Engine/: CMakeLists.txt
Engine/Include/Assets/: AssetLoader.h
Engine/Include/Core/: Core.h  DeletionQueue.h  InputCodes.h  InputManager.h  Log.h  QuestExport.h  StringID.h  Window.h
Engine/Include/Core/Allocators/: AllocatorBase.h  LinearAllocator.h
Engine/Include/Core/Containers/: DeletionQueue.h  RawBuffer.h
Engine/Include/Core/Events/: EngineEvents.h  EventBase.h  EventManager.h  Events.h
Engine/Include/Engine/: Engine.h  GameApplication.h
Engine/Include/Launch/: Entrypoint.h
Engine/Include/Platform/: PlatformUtility.h
Engine/Include/RHI/: GraphicsContext.h  GraphicsDevice.h  RHIContext.h  RHISettings.h  ResourceTypes.h
Engine/Include/Renderer/: RenderTypes.h  TestCamera.h
Engine/Include/Utility/: Hash.h
Engine/Resources/ShaderCache/: colored_triangle_mesh-vert.spv  general_input-vert.spv
Engine/Resources/Shaders/: colored_triangle.frag  colored_triangle_mesh.vert  general_input.vert  gradient.comp
Engine/Source/Assets/: AssetLoader.cpp
Engine/Source/Core/: InputManager.cpp  Log.cpp  StringID.cpp
Engine/Source/Core/Allocators/: AllocatorBase.cpp  LinearAllocator.cpp
Engine/Source/Core/Events/: EngineEvents.cpp  EventManager.cpp  Events.cpp
Engine/Source/Engine/: Engine.cpp  GameApplication.cpp
Engine/Source/Launch/: Entrypoint.cpp
Engine/Source/Platform/GLFW/: GLFW_Window.cpp  GLFW_Window.h
Engine/Source/RHI/: GraphicsDevice.cpp
Engine/Source/Renderer/: TestCamera.cpp
Engine/Source/VulkanRHI/: VKGraphicsContext.h  VkCommon.h  VkDescriptors.cpp  VkDescriptors.h  VkGraphicsContext.cpp  VkGraphicsDevice.cpp  VkGraphicsDevice.h  VkInit.cpp  VkInit.h  VkLoader.cpp  VkLoader.h  VkPipelines.cpp  VkPipelines.h  VkRHIContext.h  VkRHISettings.cpp  VkRHISettings.h  VkTypes.h
QuestEngine/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
QuestEngine/Include/Core/: InputCodes.h  InputManager.h  Log.h  QuestEngineTest.h  Window.h
QuestEngine/Include/Engine/: Engine.h
QuestEngine/Include/RHI/: GraphicsDevice.h  RHIContext.h
QuestEngine/Source/: CMakeLists.txt
QuestEngine/Source/Core/: InputManager.cpp  Log.cpp  QuestEngineTest.cpp  Window.cpp
QuestEngine/Source/Engine/: Engine.cpp
QuestEngine/Source/Platform/GLFW/: GLFW_Timer.cpp  GLFW_Window.cpp  GLFW_Window.h
QuestEngine/Source/RHI/: GraphicsContext.cpp  GraphicsDevice.cpp  RHIContext.cpp
QuestEngine/Source/VulkanRHI/: VKGraphicsContext.h  VkGraphicsContext.cpp  VkGraphicsDevice.cpp  VkGraphicsDevice.h  VkInit.cpp  VkInit.h
Runtime/: CMakeLists.txt
Runtime/Source/: main.cpp
Sandbox/: CMakeLists.txt
Sandbox/Source/: SandboxAPI.h  SandboxCore.h  SandboxGameApplication.cpp  SandboxGameApplication.h  main.cpp
